2014-09-16 Kyotaro Horiguchi <horiguchi.kyotaro@lab.ntt.co.jp>
	* pg_dbms_stats.c: Fix a bug that inheritance state was wrongly
	ahndled. This was resulted in a failure of statistics locking for
	inheritance parents.

2014-08-25 Kyotaro Horiguchi <horiguchi.kyotaro@lab.ntt.co.jp>
	* pg_dbms_stats.c: Fixed a bug that relation ids which are the
	keys for the relation statistics cache was mistakenly treated as
	strings. This causes a false match between oids having a
	intermediate 0x00 byte and identical lower bytes (for the little
	endian case). Returning the wrong statistics cache can result in
	server crash, or at least unexpected plans.
	* pg_dbms_stats-1.3.3.sql: Lock granurality for pg_dbms_stats's
	operations was raised. Simultaneous lock operations on different
	tables no longer block each other.

2014-06-06 Kyotaro Horiguchi <horiguchi.kyotaro@lab.ntt.co.jp>
	* pg_dbms_stats.c: pg_dbms_stats no more causes planner to access
	repeatedly to the tables of pg_dbms_stats for nonexistent saved
	statistics during considering access paths involving tables or
	indexes that don't have their statistics 'lock'ed. This change
	improves the performance especially for light weight (which means
	taking less than a few milliseconds) queries on no-locked
	tables/indexes.

	* pg_dbms_stats.c: Fix a bug potentially causes SEGV crash.

	* pg_dbms_stats--*.sql, pg_dbms_stats.control: Now declares the
	right version to the extension framework. ALTER EXTENSION can be
	used to upgrade from the older versions.

2013-11-07 Kyotaro Horiguchi <horiguchi.kyotaro@lab.ntt.co.jp>
	* Fixed a bug potentially cause SEGV after changing column data
	types on 'lock'ed tables

	* Added clean_up_stats() function, which erases all saved
	statistics left alone after deleting tables before unlocking
	staistics.

2013-11-07 Kyotaro Horiguchi <horiguchi.kyotaro@lab.ntt.co.jp>
	* First published version.