@@ -1,4 +1,4 @@
-/* pg_dbms_stats/pg_dbms_stats--1.3.2.sql */
+/* pg_dbms_stats/pg_dbms_stats--1.3.4.sql */
 
 -- complain if script is sourced in psql, rather than via CREATE EXTENSION
 \echo Use "CREATE EXTENSION pg_dbms_stats" to load this file. \quit
