@@ -1,7 +1,7 @@
 # pg_dbms_stats extension
 
 comment = 'stabilize plans by fixing statistics'
-default_version = '1.3.3'
+default_version = '1.3.4'
 module_pathname = '$libdir/pg_dbms_stats'
 relocatable = false
 schema = dbms_stats
